<resources>
    <string name="app_name">Sunway Pals</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_username">Yeap Khor Chin</string>
    <string name="nav_header_pals_number">1800 3325 4712</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_setting">Settings</string>
    <string name="menu_refresh">Refresh</string>

    <string name="menu_points">My Points</string>
    <string name="menu_vouchers">My Vouchers</string>
    <string name="menu_benefits">My Benefits</string>
    <string name="menu_cards">Manage Cards</string>
    <string name="menu_pin">Change PIN</string>
    <string name="menu_password">Change Password</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_app_guide">App Guide</string>
    <string name="menu_pals_guide">Sunway Pals Usage Guide</string>
    <string name="menu_about">About</string>
    <string name="menu_terms_conditions">Term &amp; Condition</string>

    <string name="title_card">Cards</string>
    <string name="title_bag">Promotion</string>
    <string name="title_store">Stores</string>
    <string name="title_voucher_wallet">Voucher</string>
    <string name="title_message">Message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
